--- a/project.properties
+++ b/project.properties
@@ -12,5 +12,4 @@
 
 # Project target.
 target=Google Inc.:Google APIs:21
-android.library.reference.1=../appcompat_v7
-android.library.reference.2=../gridlayout_v7
+android.library.reference.1=../../work/java/appcompat_v7
