--- a/project.properties
+++ b/project.properties
@@ -11,5 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=Google Inc.:Google APIs:21
-android.library.reference.1=../../work/java/appcompat_v7
+target=android-23
+android.library.reference.1=../appcompat_v7
